--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "notistack": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "scripts": {
